# telegram-dl-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/telegram_dl_bot/: __main__.py  bot.py  cli.py  config.py  logging.py
